[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/fases/map1.png" type="Texture" id=1]
[ext_resource path="res://Assets/fases/map1Pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/fases/map1Hover.png" type="Texture" id=3]
[ext_resource path="res://Hud/hud/backgroundd (1).jpg" type="Texture" id=4]
[ext_resource path="res://Hud/theme2.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Button_exit.gd" type="Script" id=6]
[ext_resource path="res://Scripts/TextureButtonMap1.gd" type="Script" id=7]
[ext_resource path="res://Scripts/HUDFases.gd" type="Script" id=8]
[ext_resource path="res://Scripts/TextureButtonMap2.gd" type="Script" id=9]
[ext_resource path="res://Assets/fases/map2Hover (1).png" type="Texture" id=10]
[ext_resource path="res://Assets/fases/map2Pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/fases/map2.png" type="Texture" id=12]
[ext_resource path="res://Assets/fases/map2Lock.png" type="Texture" id=13]
[ext_resource path="res://Assets/stars/0star.png" type="Texture" id=14]

[node name="Node" type="Node"]
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -400.0
margin_top = -51.0
margin_right = 1520.0
margin_bottom = 1074.0
texture = ExtResource( 4 )

[node name="Button_exit" type="Button" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 137.0
margin_bottom = 92.0
focus_mode = 0
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Back"
script = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 278.0
margin_top = 319.0
margin_right = 539.0
margin_bottom = 519.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 7 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 721.0
margin_top = 316.0
margin_right = 983.0
margin_bottom = 516.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 13 )
script = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 324.0
margin_top = 435.0
margin_right = 491.0
margin_bottom = 560.0
mouse_filter = 2
texture = ExtResource( 14 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 770.0
margin_top = 432.0
margin_right = 935.0
margin_bottom = 553.0
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
